--- a/oakland/intro.tex
+++ b/oakland/intro.tex
@@ -19,8 +19,8 @@ content. The shifting legal and political landscape suggests that CDNs may
 soon face liability for the content that they host. For example, the European
 Union has been considering laws that would remove safe harbor protection on
 copyright infringement for online service providers if they do not deploy
-tools that can automatically inspect and remove infringing content~\cite{eu-
-copyright}.  In the United States, various laws under consideration threaten
+tools that can automatically inspect and remove infringing content~\cite{eu-copyright}.  
+In the United States, various laws under consideration threaten
 aspects of Section 230 of the Communications Decency Act, which protects CDNs
 from federal criminal liability for the content that they host. Tussles
 surrounding speech, from copyright violations to hate speech, are currently
